Fix horizontal scroll

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -156,3 +156,6 @@ div.dataTables_wrapper div.dataTables_length select {
     color: var(--primary) !important;
     
 }
+.label-small {
+    font-size: 10px !important;
+}
